<resources>
    <string name="app_name">ReCode</string>
    <string name="title_home">推送</string>
    <string name="title_dashboard">备忘录</string>
    <string name="title_notifications">自主测试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_MyAnlysis">我的体检单</string>
    <string name="menu_LastSuggestion">历史建议</string>
    <string name="menu_slideshow">预留……</string>
    <string name="menu_ConnectUs">联系我们</string>
    <string name="menu_Setting">设置</string>
    <string name="menu_LogOut">退出登录</string>

</resources>
